Update font styles in countdown page for improved readability

--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geri Sayım - 15 Haziran 2025</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,700;1,700&display=swap');
+
         :root {
             --text-color: #0b0404;
             --shadow: rgba(0, 0, 0, 0.4);
         }
 
         body {
+            font-family: "Cascadia Code", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 700;
+            font-style: normal;
             margin: 0;
             padding: 20px;
-            font-family: monospace;
             display: flex;
             flex-direction: column;
             justify-content: center;
