Fix typo in page title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LGS SAYACIs</title>
+    <title>LGS SAYACI</title>
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&family=Roboto+Mono:wght@700&display=swap"
         rel="stylesheet">
     <style>
