Remove brown noise toggle button from countdown page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
-    <button id="noiseToggle">Kahverengi Gürültü</button>
+    <!-- <button id="noiseToggle">Kahverengi Gürültü</button> -->
 
     <script>
         // Brown noise generator
