Restore brown noise toggle button in countdown page

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
             border-radius: 6px;
             cursor: pointer;
             z-index: 100;
+            visibility: hidden
         }
     </style>
 </head>
 
 <body>
     <canvas id="canvas"></canvas>
-    <!-- <button id="noiseToggle">Kahverengi Gürültü</button> -->
+    <button id="noiseToggle">Kahverengi Gürültü</button>
 
     <script>
         // Brown noise generator
